# attention-studio

./: .gitignore  AGENTS.md  README.md  pyproject.toml
data/: train.txt
src/attention_studio/: __init__.py  __main__.py
src/attention_studio/agents/: __init__.py  agents.py
src/attention_studio/core/: __init__.py  ablation.py  activation_collector.py  activation_db.py  analysis_history.py  attention_pattern.py  attribution.py  attribution_graph.py  batch_processor.py  circuit_discovery.py  comparison.py  concept_discovery.py  crm.py  dataset.py  embedding_analyzer.py  feature_extractor.py  gradient_analyzer.py  hyperparameter_optimizer.py  interpretability.py  layer_analysis.py  logit_analyzer.py  metrics_dashboard.py  model_comparison.py  model_diagnostics.py  model_exporter.py  model_manager.py  model_registry.py  neuron_analysis.py  probing.py  query_parser.py  sae_evaluation.py  (+4 more)
tests/integration/: test_crm_training.py  test_model_loading.py
tests/ui/: test_main_window.py  test_visualization.py
tests/unit/: test_ablation.py  test_activation_collector.py  test_activation_db.py  test_analysis_history.py  test_attention_pattern.py  test_attribution.py  test_attribution_graph.py  test_batch_processor.py  test_benchmark.py  test_cache.py  test_circuit_discovery.py  test_comparison.py  test_concept_discovery.py  test_crm.py  test_dashboard.py  test_embedding_analyzer.py  test_experiment_tracker.py  test_feature_extractor.py  test_gradient_analyzer.py  test_hyperparameter_optimizer.py  test_interpretability.py  test_layer_analysis.py  test_logging_utils.py  test_logit_analyzer.py  test_memory.py  test_metrics.py  test_metrics_dashboard.py  test_model_diagnostics.py  test_model_exporter.py  test_model_registry.py  test_neuron_analysis.py  test_probing.py  test_prompt_library.py  test_report_generator.py  test_representation_analyzer.py  test_sae_evaluation.py  test_serialization.py  test_session.py  test_settings.py  test_theme.py  (+3 more)
(+40 files in other folders)
